--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,11 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
+    "progress": "^2.0.3",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6"
   }
 }
