--- a/back/package.json
+++ b/back/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "progress": "^2.0.3",
