--- a/back/package.json
+++ b/back/package.json
@@ -20,9 +20,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "progress": "^2.0.3",
+    "react-toastify": "^9.1.3",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   }
